fixed issue with scaling of login screen, should now work on mobile and PC

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -49,7 +49,7 @@ footer {
     position: fixed;
     bottom: -30px;
     width: 100%;
-    padding: 50px 0 20px;
+    padding: 30px 0 15px;
     color: #EAE2B6;
     text-align: center;
 }
@@ -107,7 +107,7 @@ footer {
 
 .border{      
     padding: 30px 8px;
-    width: clamp(250px, 50%, 75%);
+    width: clamp(250px, 32%, 35%);
     margin-left: auto ;
     margin-top: 5vh;
     margin-right: auto;
